--- a/style.css
+++ b/style.css
@@ -96,12 +96,12 @@ header a {
 }
 
 #cannelloni {
-  background-image: url('https://www.lospicchiodaglio.it/img/ricette/cannellonicarne.jpg');
+  background-image: url('https://i0.wp.com/www.piccolericette.net/piccolericette/wp-content/uploads/2020/05/4348_Cannelloni.jpg?resize=895%2C616&ssl=1');
   height: 700px
 }
 
 #cannelloni2 {
-  height: 200px
+  height: 100px
 }
 
 p {
